...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ue4-F3-XrY" userLabel="SliderView">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="TTh-tc-7Yq">
                                        <rect key="frame" x="20" y="11" width="335" height="29"/>
                                        <segments>
                                            <segment title="Only Images"/>
                                            <segment title="Both"/>
                                            <segment title="Only Gifs"/>
                                        </segments>
                                    </segmentedControl>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="C9S-ir-Lus"/>
...
